# CXXUtility

./: CMakeLists.txt  LICENSE  README.md
include/cxxutility/: debugstream.h  definitions.h  sfinae.h  test.h
src/: debugstream.cpp  test.cpp
